--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,9 +43,18 @@ jobs:
     working_directory: /go/src/github.com/y-yagi/goext
     <<: *test
 
+  go-1.13-test:
+    docker:
+      - image: golang:1.13-stretch
+        environment:
+          GO111MODULE: "on"
+    working_directory: /go/src/github.com/y-yagi/goext
+    <<: *test
+
 workflows:
   version: 2
   build:
     jobs:
       - go-1.11-test
       - go-1.12-test
+      - go-1.13-test
